# similarity_search_mlops

./: README.md  mlops_similarity.ipynb  pyproject.toml
data/: data_meetup.csv
