[tool.poetry]
name = "mlops-community-vector-search"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.3"
jupyterlab = "^4.1.5"
milvus = "2.2.14"
pymilvus = "^2.3.7"
openai = "^1.14.1"
python-dotenv = "^1.0.1"
sentence-transformers = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
